<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <Button
        android:id="@+id/button_open_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:onClick="logout"
        android:text="@string/log_out_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_open_opentitle"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/textview_open_opentitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_open_label"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editext_open_gamecode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/button_open_joingame"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#FFB340"
        android:onClick="joinGame"
        android:shape="oval"
        android:text="@string/join_game_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textview_open_ortext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_open_opentitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_open_creategame"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/empty"
        android:onClick="createGame"
        android:text="@string/create_game_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/button_open_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_open_opentitle"
        app:layout_constraintVertical_bias="0.64"
        app:strokeColor="@color/yellow"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/editext_open_gamecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_game_code_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_open_joingame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_open_opentitle" />

    <TextView
        android:id="@+id/textview_open_ortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/or_label"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/button_open_creategame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>