<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.LoginActivity">

  <TextView
      android:id="@+id/textview_login_apptitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/akronim"
      android:text="@string/app_title_label"
      android:textColor="@color/white"
      android:textSize="96sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/inputlayout_login_emailinput"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.45" />

  <Button
      android:id="@+id/button_login_login"
      android:layout_width="205dp"
      android:layout_height="65dp"
      android:backgroundTint="@color/yellow"
      android:onClick="login"
      android:text="@string/login_label"
      android:textAllCaps="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textview_login_questiontext"
      app:layout_constraintVertical_bias="0.36" />

  <TextView
      android:id="@+id/button_login_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:minHeight="48dp"
      android:onClick="register"
      android:text="@string/sign_up_label"
      android:textColor="@color/yellow"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/textview_login_questiontext"
      app:layout_constraintTop_toBottomOf="@+id/inputlayout_login_passwordinput" />

  <TextView
      android:id="@+id/textview_login_questiontext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dont_have_account_label"
      android:textColor="@color/white"
      app:layout_constraintBaseline_toBaselineOf="@+id/button_login_register"
      app:layout_constraintEnd_toStartOf="@+id/button_login_register"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/inputlayout_login_emailinput"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="152dp"
      android:layout_marginEnd="32dp"
      android:hint="@string/email_text"
      android:textColorHint="@color/white"
      app:boxStrokeColor="@color/white"
      app:endIconMode="clear_text"
      app:hintTextColor="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/inputlayout_login_passwordinput"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.51"
      app:startIconDrawable="@android:drawable/ic_dialog_email"
      app:startIconTint="@color/white">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputedittext_login_emailinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/inputlayout_login_passwordinput"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:hint="@string/password_text"
      android:textColorHint="@color/white"
      app:boxStrokeColor="@color/white"
      app:endIconMode="password_toggle"
      app:endIconTint="@color/white"
      app:hintTextColor="@color/white"
      app:layout_constraintBottom_toTopOf="@+id/textview_login_questiontext"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputlayout_login_emailinput"
      app:startIconDrawable="@android:drawable/ic_lock_lock"
      app:startIconTint="@color/white">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputedittext_login_passwordinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>